<resources>
    <string name="app_name">Food Order</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_title">Welcome back</string>
    <string name="login_subtitle">Login to your account</string>
    <string name="login_mobile_number_hint">Mobile number</string>
    <string name="login_password_hint">Password</string>
    <string name="login_forgot_password">Forgot your password?</string>
    <string name="login_dont_have_account">Don\'t have an account?</string>
    <string name="login_sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="otp_verify_your_phone_number">Phone verification</string>
    <string name="otp_enter_here">Enter your OTP here</string>
    <string name="orp_dindt_receive_code">Dind\'t you receive any code?</string>
    <string name="otp_resend_code">Resend a new code</string>
    <string name="signup_title">Create an account</string>
    <string name="signup_terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="signup_disclaimer">By signing up you agree to the</string>
    <string name="signup_confirm_password">Confirm password</string>
    <string name="signup_password">Password</string>
    <string name="signup_mobile_number">Mobile number</string>
    <string name="signup_email">Email</string>
    <string name="signup_username">Username</string>
    <string name="forgot_password_title">Forgot password</string>
    <string name="forgot_password_subtitle">Please enter your email address. You will receive a link to reset your password via email.</string>
    <string name="forgot_send">Send</string>
    <string name="sign_up">Sign up</string>
    <string name="menu_my_order">My Order</string>
    <string name="menu_explore">Explore</string>
    <string name="menu_my_profile">My Profile</string>
</resources>
