<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.pratima.foodorderapp.ui.viewmodel.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activities.SignUpActivity">

        <TextView
            android:id="@+id/signup_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/Formtitle"/>

        <EditText
            android:id="@+id/signup_username"
            style="@style/EdittextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_50"
            android:hint="@string/signup_username"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signup_title" />

        <EditText
            android:id="@+id/signup_email"
            style="@style/EdittextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_10"
            android:hint="@string/signup_email"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signup_username" />

        <EditText
            android:id="@+id/signup_phone"
            style="@style/EdittextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_10"
            android:hint="@string/signup_mobile_number"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signup_email" />

        <EditText
            android:id="@+id/signup_password"
            style="@style/EdittextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_10"
            android:hint="@string/signup_password"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signup_phone" />

        <EditText
            android:id="@+id/signup_confirm_password"
            style="@style/EdittextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_10"
            android:hint="@string/signup_confirm_password"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signup_password" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space_20"
            android:layout_marginTop="@dimen/space_20"
            android:layout_marginRight="@dimen/space_20"
            android:background="@drawable/round_rect_button"
            android:onClick="@{() -> viewModel.logUserIn()}"
            android:text="@string/sign_up"
            android:textColor="@android:color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signup_confirm_password" />

        <TextView
            android:id="@+id/signup_disclaimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_16"
            android:text="@string/signup_disclaimer"
            android:textSize="@dimen/text_medium"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/signup_terms_conditions" />

        <TextView
            android:id="@+id/signup_terms_conditions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_terms_conditions"
            android:layout_marginBottom="@dimen/space_16"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text_medium"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>