<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.foodorderapp.ui.viewmodel.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activities.LoginActivity"
        android:foregroundGravity="center">

        <TextView
            android:id="@+id/login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_title"
            android:layout_marginTop="@dimen/space_80"
            android:textSize="@dimen/text_big"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@android:color/black"/>
        <TextView
            android:id="@+id/login_sub_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_subtitle"
            android:textSize="@dimen/text_medium"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_title"
            android:textColor="@android:color/darker_gray"/>
        <EditText
            android:id="@+id/login_mobile_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_80"
            app:layout_constraintTop_toBottomOf="@id/login_sub_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:hint="@string/login_mobile_number_hint"
            style="@style/EdittextStyle"/>
        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/login_mobile_number"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:hint="@string/login_password_hint"
            android:layout_marginTop="@dimen/space_10"
            style="@style/EdittextStyle"/>
        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_marginTop="@dimen/space_20"
            app:layout_constraintTop_toBottomOf="@id/login_password"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="@dimen/space_20"
            android:layout_marginRight="@dimen/space_20"
            android:background="@drawable/round_rect_button"
            android:textColor="@android:color/white"
            android:onClick="@{() -> viewModel.logUserIn()}"/>
        <TextView
            android:id="@+id/login_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_forgot_password"
            android:layout_marginTop="@dimen/space_16"
            android:textSize="@dimen/text_medium"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_button"/>
        <TextView
            android:id="@+id/login_dont_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_dont_have_account"
            android:layout_marginBottom="@dimen/space_16"
            android:textSize="@dimen/text_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <TextView
            android:id="@+id/login_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_sign_up"
            android:layout_marginBottom="@dimen/space_16"
            android:textSize="@dimen/text_medium"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@+id/login_dont_have_account"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginLeft="@dimen/space_10"
            android:layout_marginStart="@dimen/space_10"
            android:textColor="@color/colorPrimaryDark"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>