<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.pratima.foodorderapp.ui.viewmodel.LoginViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activities.ForgotPasswordActivity">

        <TextView
            android:id="@+id/forgot_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/forgot_password_title"
            style="@style/Formtitle"/>

        <TextView
            android:id="@+id/forgot_sub_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password_subtitle"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/text_medium"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/forgot_title"
            android:textAlignment="center"
            android:paddingRight="@dimen/space_30"
            android:paddingStart="@dimen/space_30"
            android:paddingLeft="@dimen/space_30" />

        <EditText
            android:id="@+id/forgot_email"
            style="@style/EdittextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_80"
            android:hint="@string/signup_email"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/forgot_sub_title" />

        <Button
            android:id="@+id/forgot_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space_20"
            android:layout_marginTop="@dimen/space_20"
            android:layout_marginRight="@dimen/space_20"
            android:background="@drawable/round_rect_button"
            android:onClick="@{() -> viewModel.logUserIn()}"
            android:text="@string/forgot_send"
            android:textColor="@android:color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/forgot_email" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>