<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.pratima.foodorderapp.ui.viewmodel.OTPViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activities.OTPVerificationActivity">


        <TextView
            android:id="@+id/otp_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/otp_verify_your_phone_number"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/Formtitle"/>

        <TextView
            android:id="@+id/otp_sub_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/otp_enter_here"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/text_medium"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/otp_title" />


        <EditText
            android:id="@+id/otp_edittext_1"
            style="@style/EdittextStyle.OTP"
            app:layout_constraintEnd_toStartOf="@+id/otp_edittext_2"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/otp_sub_title" />

        <EditText
            android:id="@+id/otp_edittext_2"
            style="@style/EdittextStyle.OTP"
            app:layout_constraintEnd_toStartOf="@+id/otp_edittext_3"
            app:layout_constraintStart_toEndOf="@+id/otp_edittext_1"
            app:layout_constraintTop_toBottomOf="@id/otp_sub_title"/>

        <EditText
            android:id="@+id/otp_edittext_3"
            style="@style/EdittextStyle.OTP"
            app:layout_constraintEnd_toStartOf="@+id/otp_edittext_4"
            app:layout_constraintStart_toEndOf="@+id/otp_edittext_2"
            app:layout_constraintTop_toBottomOf="@id/otp_sub_title" />

        <EditText
            android:id="@+id/otp_edittext_4"
            style="@style/EdittextStyle.OTP"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/otp_edittext_3"
            app:layout_constraintTop_toBottomOf="@id/otp_sub_title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/orp_dindt_receive_code"
            android:textSize="@dimen/text_medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="@id/otp_resend_code"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/otp_resend_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_20"
            android:text="@string/otp_resend_code"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text_medium"
            android:textStyle="bold"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>